@@ -1,13 +1,15 @@
 package com.book.store.app.service;
 
+import static com.book.store.app.specification.BookSpecification.withSearchParams;
+
 import com.book.store.app.dto.BookDto;
+import com.book.store.app.dto.BookSearchParametersDto;
 import com.book.store.app.dto.CreateBookRequestDto;
 import com.book.store.app.entity.Book;
 import com.book.store.app.exception.EntityNotFoundException;
 import com.book.store.app.mapper.BookMapper;
 import com.book.store.app.repository.BookRepository;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -32,15 +34,14 @@ public class BookServiceImpl implements BookService {
     public List<BookDto> findAll() {
         return bookRepository.findByDeletedFalse().stream()
                 .map(bookMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     @Transactional(readOnly = true)
     public BookDto findById(Long id) {
         Book book = bookRepository.findByIdAndDeletedFalse(id)
-                .orElseThrow(() -> new EntityNotFoundException("Book not found with id "
-                        + id));
+                .orElseThrow(() -> new EntityNotFoundException("Book not found with id " + id));
         return bookMapper.toDto(book);
     }
 
@@ -48,12 +49,9 @@ public class BookServiceImpl implements BookService {
     @Transactional
     public BookDto update(Long id, CreateBookRequestDto dto) {
         Book book = bookRepository.findByIdAndDeletedFalse(id)
-                .orElseThrow(() -> new EntityNotFoundException("Book not found with id "
-                        + id));
-
+                .orElseThrow(() -> new EntityNotFoundException("Book not found with id " + id));
         bookMapper.updateEntityFromDto(dto, book);
         Book updated = bookRepository.save(book);
-
         return bookMapper.toDto(updated);
     }
 
@@ -61,9 +59,15 @@ public class BookServiceImpl implements BookService {
     @Transactional
     public void delete(Long id) {
         Book book = bookRepository.findByIdAndDeletedFalse(id)
-                .orElseThrow(() -> new EntityNotFoundException("Book not found with id "
-                        + id));
-
+                .orElseThrow(() -> new EntityNotFoundException("Book not found with id " + id));
         bookRepository.deleteById(book.getId());
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<BookDto> search(BookSearchParametersDto params) {
+        return bookRepository.findAll(withSearchParams(params)).stream()
+                .map(bookMapper::toDto)
+                .toList();
     }
 }
